--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -16,11 +16,10 @@
     <meta name="description" content="D&D Battle Tracker is an initiative and combat tracker tool for Dungeons & Dragons 5th Edition (D&D 5e).">
     <meta content="D&D Battle Tracker, D&D Combat Tracker, D&D Initiative Tracker, Dungeons and Dragons, 5e" name="keywords">
     <title>D&D Battle Tracker | D&D 5e Combat Tracker</title>
-    {{{styleBundle}}}
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    {{{bundle}}}
+    <script>window.BUILD_TIME=<%= BUILD_TIME %></script>
   </body>
 </html>
