--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -19,7 +19,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="dnd-battle-tracker"></div>
     <script>window.BUILD_TIME=<%= BUILD_TIME %></script>
   </body>
 </html>
