--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1624,3 +1624,58 @@ button[role=tab][aria-selected=true]:focus  {
   top: 8px;
   position: relative
 }
+
+/* Alert Dialog */
+.alert-dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  z-index: 4;
+  background-color: #EBE1AD;
+  border: 2px solid #822000;
+  border-radius: 15px;
+  margin: 60px 0 10px 0;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+@media only screen and (max-width: 825px) {
+  .alert-dialog {
+    width: 100%;
+    border-left: none;
+    border-right: none;
+    border-radius: 0;
+  }
+}
+
+.alert-dialog--header {
+  border-bottom: 1px solid #822000;
+  text-align: center;
+  color: #822000;
+}
+
+.alert-dialog--buttons {
+  margin-top: 20px;
+  width: 100%;
+  display: flex;
+  justify-content: end;
+  column-gap: 10px;
+}
+
+.alert-dialog--button {
+  width: 88px;
+  font-size: 16px;
+}
+
+.alert-dialog--background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.7;
+  z-index: 3;
+}
